// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs
// Updated from app_db SQL dump - 2026-08-10

Enum user_role {
  admin
  user
}

Table users {
  id integer [primary key, increment]
  name varchar(100) [not null]
  surname varchar(100) [not null]
  email varchar(255) [not null, unique]
  password_hash varchar(255) [not null]
  created_at timestamp [null, default: `CURRENT_TIMESTAMP`]
  role user_role [not null, default: 'user']
  status boolean [not null, default: 1, note: 'to check whether user is still an employee or not']
}

Table clients {
  id integer [primary key, increment]
  name varchar(50) [not null, note: 'company / private client name']
  type_id integer [not null]
  status boolean [not null, default: 1, note: 'for SOFT DELETE: 1 = active, 0 = inactive/suspended']
  client_code varchar(30) [not null, unique, note: 'immutable and descriptive business identifier, e.g. CARSHOPVALL8 (cannot be changed after creation)']
  city varchar(70) [not null, note: 'Bassano del Grappa / Berlin / ...']
  province varchar(3) [null, note: 'VI / NY / ...']
  created_at timestamp [null, default: `CURRENT_TIMESTAMP`]

  indexes {
    type_id [name: 'idx_clients_type']
  }
}

Table coupons {
  id integer [primary key, increment]
  client_id integer [not null]
  discount_rule_id integer [not null]
  usage_cap integer [null, note: 'used for First Visit Only coupons']
  exp_date datetime [null]
  code varchar(100) [not null, unique, note: '[SERVICE]-[VISIT]-[DISCOUNT]-[CLIENT_CODE], e.g. PHYS-FIRST-20-CARSHOPVALL8']
  status boolean [not null, default: 1, note: 'for SOFT DELETE: 1 = active, 0 = inactive/suspended']
  created_at timestamp [null, default: `CURRENT_TIMESTAMP`]

  indexes {
    (client_id, discount_rule_id) [unique, name: 'uq_client_rule']
    client_id [name: 'idx_coupon_client']
    discount_rule_id [name: 'idx_coupon_rule']
  }
}

Table discount_rules {
  id integer [primary key, increment]
  service_category_id integer [not null]
  visit_type_id integer [not null]
  discount_perc integer [not null]
  created_at timestamp [null, default: `CURRENT_TIMESTAMP`]

  indexes {
    (service_category_id, visit_type_id, discount_perc) [unique, name: 'unique_discount_rule']
    service_category_id [name: 'idx_discount_service']
    visit_type_id [name: 'idx_discount_visit']
  }
}

Table client_types {
  id integer [primary key, increment]
  type varchar(2) [not null, unique, note: 'PR / CO']
  created_at timestamp [null, default: `CURRENT_TIMESTAMP`]
}

Table service_categories {
  id integer [primary key, increment]
  name varchar(50) [not null, unique]
  created_at timestamp [null, default: `CURRENT_TIMESTAMP`]
}

Table visit_types {
  id integer [primary key, increment]
  name varchar(50) [not null, unique]
  created_at timestamp [null, default: `CURRENT_TIMESTAMP`]
}


// Relationships

Ref client_type_clients: clients.type_id > client_types.id // many-to-one
Ref client_coupons: coupons.client_id > clients.id // many-to-one
Ref rule_coupons: coupons.discount_rule_id > discount_rules.id // many-to-one
Ref category_rules: discount_rules.service_category_id > service_categories.id // many-to-one
Ref visit_rules: discount_rules.visit_type_id > visit_types.id // many-to-one


// Sample / current records

Records users(id, name, surname, email, password_hash, created_at, role, status) {
  1, 'Marco', 'Rossi', 'marco.rossi@clinic.com', '$2y$10$exampleHash1', '2026-07-06 14:47:13', 'user', 1
  15, 'Devis', 'Vallotto', 'd.v@companydomain.com', '$2y$10$cJu590L780cIzpRBWEJz8ex3tUEnpwe/SLt6EOoJu8Z8F/m0Ug9qm', '2026-07-20 08:44:52', 'admin', 1
}

Records client_types(id, type, created_at) {
  1, 'PR', '2026-07-06 14:47:13'
  2, 'CO', '2026-07-06 14:47:13'
}

Records clients(id, name, type_id, status, client_code, city, province, created_at) {
  1, 'Carrozzeria Vallata', 2, 1, 'CARSHOPVALL8', 'Bassano del Grappa', 'VI', '2026-07-06 14:47:13'
  19, 'NinaFluffy Corp.', 2, 1, 'NINAFLUFFY', 'Pove del Grappa', 'VI', '2026-08-05 14:13:41'
  20, 'Nina Pulcina', 2, 1, 'NINASTR', 'Pove', 'VI', '2026-08-06 10:48:51'
}

Records service_categories(id, name, created_at) {
  1, 'Physiotherapy', '2026-07-06 14:47:13'
  2, 'Medical', '2026-07-06 14:47:13'
  3, 'All services', '2026-07-06 14:47:13'
}

Records visit_types(id, name, created_at) {
  1, 'First visit only', '2026-07-06 14:47:13'
  2, 'All visits', '2026-07-06 14:47:13'
}

Records discount_rules(id, service_category_id, visit_type_id, discount_perc, created_at) {
  1, 1, 1, 20, '2026-07-06 14:47:13'
  75, 1, 1, 33, '2026-08-01 15:05:52'
  76, 2, 2, 15, '2026-08-01 15:06:03'
  77, 1, 1, 10, '2026-08-02 07:31:26'
  78, 3, 1, 34, '2026-08-02 08:31:51'
}

Records coupons(id, client_id, discount_rule_id, usage_cap, exp_date, code, status, created_at) {
  1, 1, 1, 1, '2027-02-15 23:59:59', 'CO-PHYS-FIRST-20-CARSHOPVALL8', 1, '2026-07-06 14:47:13'
  25, 19, 76, null, '2026-12-31 23:59:59', 'MED-ALL-15-NINAFLUFFY', 1, '2026-08-06 19:52:47'
  30, 20, 78, 5, '2026-11-01 23:59:59', 'ALL-FIRST-34-NINASTR', 1, '2026-08-09 16:47:31'
}
